welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:16: error: ')' expected but 'return' found.
return true }        
^